--- a/SBOMSystemMockup/Pages/Home.razor
+++ b/SBOMSystemMockup/Pages/Home.razor
@@ -30,52 +30,36 @@
     <button class="btn btn-secondary" @onclick="ClearFilter">解除</button>
 </div>
 
-<table class="table table-bordered table-sm">
+<table class="table table-bordered table-sm" style="table-layout: fixed;">
     <thead>
         <tr>
-            <th>製造番号</th>
-            <th>型式</th>
-            <th>機種名</th>
-            <th>現在地</th>
-            <th>機械状態</th>
-            <th>河北製造番号</th>
-            <th>過去製造番号</th>
-            <th>ロット番号</th>
-            <th>パレットNo.</th>
-            <th>預けNo.</th>
-            <th>仕様変更履歴</th>
-            <th>管理区分</th>
-            <th>状態</th>
-            <th>メーカーオプション</th>
-            <th>客先仕様</th>
-            <th>業務連絡書</th>
-            <th>製造時備考</th>
-            <th>完成日</th>
-            <th></th>
+            <th style="width: 10%;">製造番号</th>
+            <th style="width: 12%;">型式</th>
+            <th style="width: 20%;">機種名</th>
+            <th style="width: 10%;">現在地</th>
+            <th style="width: 8%;">機械状態</th>
+            <th style="width: 6%;">預けNo.</th>
+            <th style="width: 8%;">管理区分</th>
+            <th style="width: 11%;">メーカーオプション</th>
+            <th style="width: 11%;">客先仕様</th>
+            <th style="width: 6%;">完成日</th>
+            <th style="width: 8%;">操作</th>
         </tr>
     </thead>
     <tbody>
         @foreach (var machine in filteredMachines)
         {
             <tr>
-                <td>@machine.Id</td>
-                <td>@machine.Model</td>
-                <td>@machine.TypeName</td>
-                <td>@machine.Location</td>
-                <td>@machine.Status</td>
-                <td>@machine.KahokuId</td>
-                <td>@machine.PastId</td>
-                <td>@machine.LotNo</td>
-                <td>@machine.PalletNo</td>
-                <td>@machine.DepositNo</td>
-                <td>@machine.SpecHistory</td>
-                <td>@machine.ManagementType</td>
-                <td>@machine.State</td>
-                <td>@machine.MakerOption</td>
-                <td>@machine.CustomerSpec</td>
-                <td>@machine.BusinessNote</td>
-                <td>@machine.ManufactureNote</td>
-                <td>@FormatCompletionDate(machine.CompletionDate)</td>
+                <td style="overflow: hidden; text-overflow: ellipsis; white-space: nowrap;">@machine.Id</td>
+                <td style="overflow: hidden; text-overflow: ellipsis; white-space: nowrap;">@machine.Model</td>
+                <td style="overflow: hidden; text-overflow: ellipsis; white-space: nowrap;">@machine.TypeName</td>
+                <td style="overflow: hidden; text-overflow: ellipsis; white-space: nowrap;">@machine.Location</td>
+                <td style="overflow: hidden; text-overflow: ellipsis; white-space: nowrap;">@machine.Status</td>
+                <td style="overflow: hidden; text-overflow: ellipsis; white-space: nowrap;">@machine.DepositNo</td>
+                <td style="overflow: hidden; text-overflow: ellipsis; white-space: nowrap;">@machine.ManagementType</td>
+                <td style="overflow: hidden; text-overflow: ellipsis; white-space: nowrap;" title="@machine.MakerOption">@machine.MakerOption</td>
+                <td style="overflow: hidden; text-overflow: ellipsis; white-space: nowrap;" title="@machine.CustomerSpec">@machine.CustomerSpec</td>
+                <td style="overflow: hidden; text-overflow: ellipsis; white-space: nowrap;">@FormatCompletionDate(machine.CompletionDate)</td>
                 <td>
                     <a href="@($"/machine/{machine.Id}")" class="btn btn-primary btn-sm">詳細表示</a>
                 </td>
@@ -114,7 +98,7 @@
     private List<Machine> machines = new();
     private List<Machine> filteredMachines = new();
     private int currentPage = 1;
-    private int pageSize = 10;
+    private int pageSize = 15;
     private int totalRecords = 0;
     private int totalPages = 0;
     private string errorMessage = "";
@@ -161,18 +145,10 @@
                             TypeName = GetStringValue(machineData, "機種名"),
                             Location = GetStringValue(machineData, "現所在地"),
                             Status = GetStringValue(machineData, "機械状態"),
-                            KahokuId = GetStringValue(machineData, "河北製造番号"),
-                            PastId = GetStringValue(machineData, "過去製造番号"),
-                            LotNo = GetStringValue(machineData, "ロット番号"),
-                            PalletNo = GetStringValue(machineData, "パレットNo"),
                             DepositNo = GetStringValue(machineData, "預けNo"),
-                            SpecHistory = GetStringValue(machineData, "仕様変更履歴"),
                             ManagementType = GetStringValue(machineData, "管理区分"),
-                            State = GetStringValue(machineData, "機械状態"),
                             MakerOption = GetStringValue(machineData, "メーカーオプション"),
-                            CustomerSpec = GetStringValue(machineData, "客先仕様"),
-                            BusinessNote = GetStringValue(machineData, "業務連絡書"),
-                            ManufactureNote = GetStringValue(machineData, "製造時備考")
+                            CustomerSpec = GetStringValue(machineData, "客先仕様")
                         });
                     }
                     
@@ -215,9 +191,9 @@
     {
         machines = new List<Machine>
         {
-            new Machine { Id = "1510006", CompletionDate = "15-09-17", Model = "WTD-T16I", TypeName = "トルネードT16αR", Location = "本社", Status = "高荷重機", KahokuId = "", PastId = "22028829", LotNo = "", PalletNo = "", DepositNo = "", SpecHistory = "", ManagementType = "新品", State = "F-6", MakerOption = "クレーム返却後", CustomerSpec = "", BusinessNote = "", ManufactureNote = "" },
-            new Machine { Id = "1205009", CompletionDate = "19-02-18", Model = "NF-410AD", TypeName = "グレートパンチSS2", Location = "本社", Status = "中古", KahokuId = "", PastId = "", LotNo = "", PalletNo = "", DepositNo = "", SpecHistory = "", ManagementType = "中古", State = "", MakerOption = "", CustomerSpec = "", BusinessNote = "", ManufactureNote = "" },
-            new Machine { Id = "23030666", CompletionDate = "22-03-09", Model = "WM-PB-PS31ST-1", TypeName = "グレートパンチSS2", Location = "本社", Status = "新品", KahokuId = "", PastId = "231011084", LotNo = "", PalletNo = "", DepositNo = "", SpecHistory = "", ManagementType = "新品", State = "RE", MakerOption = "", CustomerSpec = "", BusinessNote = "", ManufactureNote = "" }
+            new Machine { Id = "1510006", CompletionDate = "15-09-17", Model = "WTD-T16I", TypeName = "トルネードT16αR", Location = "本社", Status = "高荷重機", DepositNo = "", ManagementType = "新品", MakerOption = "クレーム返却後", CustomerSpec = "" },
+            new Machine { Id = "1205009", CompletionDate = "19-02-18", Model = "NF-410AD", TypeName = "グレートパンチSS2", Location = "本社", Status = "中古", DepositNo = "", ManagementType = "中古", MakerOption = "", CustomerSpec = "" },
+            new Machine { Id = "23030666", CompletionDate = "22-03-09", Model = "WM-PB-PS31ST-1", TypeName = "グレートパンチSS2", Location = "本社", Status = "新品", DepositNo = "", ManagementType = "新品", MakerOption = "", CustomerSpec = "" }
         };
         filteredMachines = machines.ToList();
         totalRecords = machines.Count;
@@ -270,18 +246,10 @@
         public string TypeName { get; set; } = "";
         public string Location { get; set; } = "";
         public string Status { get; set; } = "";
-        public string KahokuId { get; set; } = "";
-        public string PastId { get; set; } = "";
-        public string LotNo { get; set; } = "";
-        public string PalletNo { get; set; } = "";
         public string DepositNo { get; set; } = "";
-        public string SpecHistory { get; set; } = "";
         public string ManagementType { get; set; } = "";
-        public string State { get; set; } = "";
         public string MakerOption { get; set; } = "";
         public string CustomerSpec { get; set; } = "";
-        public string BusinessNote { get; set; } = "";
-        public string ManufactureNote { get; set; } = "";
     }
     
     public class ApiResponse
